added endpoint for product and variants
